# synkit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE.txt  README.md  mise.toml  release-plz.toml  typos.toml
.cargo/: mutants.toml
.github/workflows/: bench.yaml  check-and-lint.yaml  docs.yaml  release.yaml  test.yaml
core/: CHANGELOG.md  Cargo.toml
core/docs/diagrams/: async_stream.mmd  parse_state.mmd
core/src/: async_stream.rs  config.rs  delimited.rs  error.rs  lib.rs  punctuated.rs  repeated.rs
core/src/traits/: diagnostic.rs  error.rs  mod.rs  parse.rs  peek.rs  printer.rs  stream.rs  to_tokens.rs
docs/: GAPS.md  book.toml
docs/src/: SUMMARY.md  getting-started.md  intro.md
docs/src/concepts/: README.md  async-streaming.md  parsing.md  printing.md  spans.md  tokens.md
docs/src/incremental/: 01-tokens.md  02-boundaries.md  03-lexer.md  04-parse.md  05-async.md  06-testing.md  README.md
docs/src/reference/: containers.md  parser-kit.md  safety.md  security.md  testing.md  traits.md
docs/src/tutorial/: 01-setup.md  02-tokens.md  03-ast.md  04-parse.md  05-printing.md  06-visitors.md  07-testing.md  08-incremental.md  README.md
examples/jsonl-parser/: Cargo.toml
examples/jsonl-parser/benches/: throughput.rs
examples/jsonl-parser/src/: ast.rs  incremental.rs  lib.rs  parse.rs
examples/jsonl-parser/tests/: stress_tests.rs
examples/toml-parser/: Cargo.toml
examples/toml-parser/src/: ast.rs  incremental.rs  lib.rs  parse.rs  print.rs  visitor.rs
examples/toml-parser/tests/: parse_test.rs  roundtrip_test.rs  test_send_sync.rs
examples/toml-parser/tests/snapshots/: roundtrip_test__snapshot_tests__snapshot_basic_toml.snap  roundtrip_test__snapshot_tests__snapshot_complex_document.snap  roundtrip_test__snapshot_tests__snapshot_inline_table.snap  roundtrip_test__snapshot_tests__snapshot_with_arrays.snap  roundtrip_test__snapshot_tests__snapshot_with_table.snap
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_parser.rs
kit/: CHANGELOG.md  Cargo.toml
kit/src/: lib.rs
kit/tests/: async_stream_test.rs  e2e_simple_grammar.rs  edge_cases.rs  minimal_test.rs  span_accuracy.rs
macros/: CHANGELOG.md  Cargo.toml
macros/src/: declare_tokens.rs  lib.rs  parser_kit.rs
