[package]
name = "synkit-fuzz"
version = "0.0.0"
edition = "2024"
authors = ["synkit contributors"]
license = "MIT OR Apache-2.0"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"
logos = "0.16"
synkit = { path = "../kit" }

[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false
